Updated Error handling, fixed Monitoring Grid duplication bug